# kafka-stream-ovh-fractal

./: .gitignore  configuration.json  pyproject.toml
Data-Processing/: Access_ovh_upload_lakefs.py  config-sample.toml  configuration.ini  environment.yml  execute.sh  image-processing.py  lakefs.py  openrc.sh  s3-boto-sample.py  starter-script.py  test-s3.py  timeseries-processing.py  word-count-s3.py  wordcount.py
Data-Streaming/: Kafka_consumer_uploading_S3.py  Spark.py  complex-consumer.py  complex-producer.py  kafka.yaml  kafka_bridge.py  mqqtt.py  mqtt-complex-consumer.py  mqtt_complex_bridge.py  mqtt_consumer.py  mqtt_producer.py  openrc.sh  ovh.py  psql-kafka-bridge.py  requirements.txt  simple-consumer.py  simple-producer.py  simple_producer.py  topics.yaml  upload_ovh_service.py  upload_service.py
Kafka-Confluent-cluster/: cluster.yaml
Readme/: instructions.txt  instructions_S3.md  instructions_kafka.md
confluent-platform/: local-confluent.sh
data-ingestion-service-demo/: Access_ovh_upload_lakefs.py  Kafka_consumer_uploading_S3.py  data_ingestion.py  edge_to_mqtt.py  hello_kafka.py  mqtt_kafka_bridge.py  pyproject.toml  upload_service.py
data-ingestion-service-demo/config/: config.toml
data-ingestion-service-demo/dags/: data_ingestion_object_storage.py
data-ingestion-service-demo/dags/airflow_provider_kafka/: __init__.py
data-ingestion-service-demo/dags/airflow_provider_kafka/hooks/: consumer.py
data-ingestion-service-demo/dags/airflow_provider_kafka/operators/: consume_from_topic.py
data-ingestion-service-demo/dags/airflow_provider_kafka/triggers/: await_message.py
data-ingestion-service-demo/data/: sample-drive-cycle.csv
data-ingestion-service-demo/schemas/: drive_cycle_key.avsc  drive_cycle_value.avsc
docker/: cnfl_connector.Dockerfile
kafka-strimzi/: .Topics.yaml.swp  Topics.yaml  broker.yaml  kafka.yaml  ksql.yaml  schema.yaml  starter-cluster.yml
mqtt/: kafka_bridge.py  mqtt-tools.sh  (+15 more)
(+243 files in other folders)
