[tool.poetry]
name = "data-ingestion-service-demo"
version = "0.1.0"
description = ""
authors = ["Harisyam Manda <Harisyam.Manda@avl.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
paho-mqtt = "^1.6.1"
kafka-python = "^2.0.2"
confluent-kafka = "^1.9.2"
s3fs = "^2022.8.2"
boto3 = "^1.24"
python-dotenv = "^0.21.0"
avro = "^1.11.1"
structlog = "^22.1.0"
pandas = "^1.5.0"
requests = "^2.28.1"
pyarrow = "^9.0.0"
airflow-provider-kafka = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
